css/vertical-timeline.scss
/* ... */
@media only screen and(min-width: 1170px) {
    .cd-container {
        margin-top: 3em;
        margin-bottom: 3em;
        header {
            height: 300px;
            line-height: 300px;
            h1 {
                font-size: 24px;
                font-size: 1.5rem;
            }
        }

        &::before {
            left: 50%;
            margin-left: -2px;
        }
    }

    .cd-timeline-label {
        text-align: center;
    }

    .cd-timeline-block {
        margin: 4em 0;
        &:first-child {
            margin-top: 0;
        }
        &:last-child {
            margin-bottom: 0;
        }
        &:nth-child(even) {
            .cd-timeline-content {
                float: right;
                .cd-read-more {
                    float: right;
                }
                .cd-date {
                    left: auto;
                    right: 122%;
                    text-align: right;
                }
            }
            .cd-timeline-content::before {
                left: auto;
                right: 100%;
                border-color: transparent;
                border-right-color: white;
            }
        }

        .cd-timeline-point {
            $diameter: 40px;
            width: $diameter;
            height: $diameter;
            left: 50%;
            margin-left: -$diameter/2;
            -webkit-transform: translateZ(0);
            -webkit-backface-visibility: hidden;
            ~ .cd-timeline-content::before {
                top: 12px;
            }
            .fa {
                display: inline-block;
                line-height: $diameter - 7px;
            }
        }
        .cd-timeline-img {
            width: 60px;
            height: 60px;
            line-height: 60px;
            left: 50%;
            margin-left: -30px;
            -webkit-transform: translateZ(0);
            -webkit-backface-visibility: hidden;
            ~ .cd-timeline-content::before {
                top: 24px;
            }
        }

        .cd-timeline-content {
            margin-left: 0;
            padding: 1.6em;
            width: 45%;
            .cd-read-more {
                float: left;
            }
            .cd-date {
                position: absolute;
                width: 100%;
                left: 122%;
                top: 12px;
                font-size: 1rem;
                color: #003765;
                font-weight: bold;
            }
            &::before {
                left: 100%;
                border-color: transparent;
                border-left-color: white;
            }
        }
    }
}

@-webkit-keyframes cd-bounce-1 {
    0% {
        opacity: 0;
        -webkit-transform: scale(0.5);
    }
    60% {
        opacity: 1;
        -webkit-transform: scale(1.2);
    }
    100% {
        -webkit-transform: scale(1);
    }
}
@-moz-keyframes cd-bounce-1 {
    0% {
        opacity: 0;
        -moz-transform: scale(0.5);
    }
    60% {
        opacity: 1;
        -moz-transform: scale(1.2);
    }
    100% {
        -moz-transform: scale(1);
    }
}
@keyframes cd-bounce-1 {
    0% {
        opacity: 0;
        -webkit-transform: scale(0.5);
        -moz-transform: scale(0.5);
        -ms-transform: scale(0.5);
        -o-transform: scale(0.5);
        //Instead of the line below you could use @includetransform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
        transform: scale(0.5);
    }
    60% {
        opacity: 1;
        -webkit-transform: scale(1.2);
        -moz-transform: scale(1.2);
        -ms-transform: scale(1.2);
        -o-transform: scale(1.2);
        //Instead of the line below you could use @includetransform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
        transform: scale(1.2);
    }
    100% {
        -webkit-transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -o-transform: scale(1);
        //Instead of the line below you could use @includetransform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
        transform: scale(1);
    }
}

@-webkit-keyframes cd-bounce-2 {
    0% {
        opacity: 0;
        -webkit-transform: translateX(-100px);
    }
    60% {
        opacity: 1;
        -webkit-transform: translateX(20px);
    }
    100% {
        -webkit-transform: translateX(0);
    }
}
@-moz-keyframes cd-bounce-2 {
    0% {
        opacity: 0;
        -moz-transform: translateX(-100px);
    }
    60% {
        opacity: 1;
        -moz-transform: translateX(20px);
    }
    100% {
        -moz-transform: translateX(0);
    }
}
@keyframes cd-bounce-2 {
    0% {
        opacity: 0;
        -webkit-transform: translateX(-100px);
        -moz-transform: translateX(-100px);
        -ms-transform: translateX(-100px);
        -o-transform: translateX(-100px);
        //Instead of the line below you could use @includetransform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
        transform: translateX(-100px);
    }
    60% {
        opacity: 1;
        -webkit-transform: translateX(20px);
        -moz-transform: translateX(20px);
        -ms-transform: translateX(20px);
        -o-transform: translateX(20px);
        //Instead of the line below you could use @includetransform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
        transform: translateX(20px);
    }
    100% {
        -webkit-transform: translateX(0);
        -moz-transform: translateX(0);
        -ms-transform: translateX(0);
        -o-transform: translateX(0);
        //Instead of the line below you could use @includetransform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
        transform: translateX(0);
    }
}
/* ... */

